# bcb-exchange-rate

./: README.md  main.py  pyproject.toml
.agents/rules/: code-style-guide.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/api/: dependencies.py  main.py  routes.py
src/domain/: entities.py  exceptions.py  ports.py
src/infrastructure/: bcb_scraper.py  sqlite_log_repository.py  sqlite_repository.py
src/use_cases/: get_ptax_quotation.py
tests/: test_api_routes.py  test_scraper_parser.py  test_sqlite_log_repository.py  test_use_cases.py
